add analytic data etc
